// Contain RPC service and the data types the services are going to accept and return

// syntax = "proto3";


// // The greeting service definition.
// service Greeter {
//   // Sends a greeting
//   rpc SayHello (HelloRequest) returns (HelloReply) {}
// }

// // The request message containing the user's name.
// message HelloRequest {
//   string name = 1;
// }

// // The response message containing the greetings
// message HelloReply {
//   string message = 1;
// }


syntax = "proto3";

message News {
  string id = 1;
  string title = 2;
  string body = 3;
  string postImage = 4;
}

service NewsService {
  rpc GetAllNews (Empty) returns (NewsList) {}
  rpc GetNews (NewsId) returns (News) {}
  rpc DeleteNews (NewsId) returns (Empty) {}
  rpc EditNews (News) returns (News) {}
  rpc AddNews (News) returns (News) {}
}

message NewsId {
  string id = 1;
}

message Empty {}

message NewsList {
 repeated News news = 1;
}